--- a/src/components/projects/ProjectDetails/ProjectDetail.module.css
+++ b/src/components/projects/ProjectDetails/ProjectDetail.module.css
@@ -10,30 +10,50 @@
 .imageContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     margin: 50px 0;
+}
+
+.imageList{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style: none;
+    margin: 0 5px;
+}
+
+.imageList img {
+    width: 290px;
+    border-radius: 5px;
 }
 
 .imageListHorizontal{
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    gap: 25px;
     flex-wrap: wrap;
-    gap: 12px;
-    width: 450px;
-    border-radius: 5px;
-    height: auto;
 }
 
 .imageListHorizontal img{
-    width: 450px;
-}
-
-.imageList img {
-    width: 250px;
-    border-radius: 5px;
+    width: 650px;
+    margin: 10px 0;
+    border-radius: 10px;
 }
 
 .top {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.topHorizontal{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -153,11 +173,6 @@
     justify-content: space-around;
 }
 
-.imageList{
-    list-style: none;
-    margin: 0 5px;
-}
-
 
 @media screen and (max-width : 890px) {
     .top {
@@ -196,10 +211,20 @@
         margin-left: 0;
     }
 
-    .imageContainer li img {
-        max-width: 150px;
-        margin: 10px 0;
+    .topRightHorizontal video{
+        width: 350px;
+        margin:auto;
     }
+
+    /* .imageListHorizontal{
+        align-items: center;
+        justify-content: center;
+    } */
+/* 
+    .imageContainer li img {
+        max-width:300px;
+        margin: 10px 0;
+    } */
 
 }
 
@@ -225,5 +250,14 @@
         width: 100%;
         height: 450px;
         overflow: auto;
+    }
+}
+
+@media screen and (max-width: 1230px){
+    .topHorizontal{
+        flex-direction: column;
+        align-items:first baseline;
+        justify-content: center;
+        margin: 20px 0;
     }
 }
