--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,27 @@
 .navbar {
-  position: relative;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0; /* required */
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-top: 61px;
-  z-index: 2;
+  padding-bottom: 20px;
+  z-index: 1;
   margin: 0 10%;
+  border-bottom: solid rgb(179, 173, 173) 1px;
+}
+.navbar::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:var(--color-bg);
+  /* background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255, 1) 90%); */
+  width: 100%;
+  z-index: -1;
 }
 
 .title {
