--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -47,12 +47,13 @@
   list-style: none;
   background-image: linear-gradient(
     90deg,
-    rgba(165, 215, 232, 0.42) 0%
-    , rgba(255,255,255,0) 100%
+    rgba(255,255,255,0.15) 0%,
+    rgba(255, 255, 255, 0.35) 100%
+
   );
-  background-size: 0 100%;
-  background-repeat: no-repeat;
-  transition: 0.4s;
+  /* background-size: 0 100%; */
+  /* background-repeat: no-repeat; */
+  /* transition: 0.8s; */
 }
 
 .aboutItem:hover{
