--- a/src/components/projects/ProjectDetails/ProjectDetail.module.css
+++ b/src/components/projects/ProjectDetails/ProjectDetail.module.css
@@ -172,7 +172,7 @@
 .bottomSection {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 
