--- a/src/components/projects/ProjectCard.module.css
+++ b/src/components/projects/ProjectCard.module.css
@@ -7,13 +7,15 @@
     background: linear-gradient(180deg, #576cbc 0%, #132153);
     box-shadow: 0 16px 14px 0 #04152d;
     padding: 18px 24px;
-    max-width: 375px;
+    max-width: 400px;
     min-height: 680px;
 }
 
 .image{
     margin-bottom: 26px;
-    width: 100%;
+    border-radius: 10px
+    /* width: 100%; */
+    /* height: 30; */
 }
 
 .title{
