--- a/src/components/projects/ProjectDetails/ProjectDetail.module.css
+++ b/src/components/projects/ProjectDetails/ProjectDetail.module.css
@@ -133,13 +133,28 @@
     width: 700px;
 }
 
-.demoVideo iframe {
+.landscapeIframe{
     border: 1px solid black;
     border-radius: 50px;
-    width: 900px;
+    width: 800px;
     height: 600px;
     margin-top: 15px;
 }
+/* 
+.demoVideo {
+    display:flex;
+    flex-direction:row;
+    justify-content:""
+} */
+.mobileIframe{
+    border: 1px solid black;
+    border-radius: 50px;
+    width: 350px;
+    height: 500px;
+    margin-top: 15px;
+}
+
+
 
 .sourceContainer {
     display: flex;
@@ -223,6 +238,16 @@
         width: 350px;
         height: 200px;
     }
+
+    .landscapeIframe{
+        border: 1px solid black;
+        border-radius: 50px;
+        width: 400px;
+        height: 300px;
+        margin-top: 15px;
+    }
+
+
 
 }
 
